# NLP-Audio

./: main.py  pyproject.toml
audio-processing/: audio.ipynb  script.py
